mudando os caminhos dos diretórios

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-./HTML/edenAreaRestrita.html
-./CSS/edenAreaRestrita.css
+./src/html/edenAreaRestrita.html
+./src/css/edenAreaRestrita.css
+./src/JS
